Scrollbar added for terminal,Loop stoped and upper-frame of terminal made stickey

--- a/CSS/app-finder.css
+++ b/CSS/app-finder.css
@@ -15,13 +15,24 @@
 ::-webkit-scrollbar{
     width: 10px;
     height: 10px;
+    background: rgb(158, 148, 148);
+}
+::-webkit-scrollbar-thumb{
+    width: 8px;
+    height: 10px;
+    background: rgb(83, 83, 83);
+    border-radius: 10px;
+}
+::-webkit-scrollbar-track{
+    background:inherit;
 }
 #finder-app #upframe {
-    position: absolute;
+    position: sticky;
     width: inherit;
     height: 25px;
     top: 0px;
     left: 0;
+    z-index: 5;
     background-color: #242423;
     border-top-left-radius: inherit;
     border-top-right-radius: inherit;
